--- a/AImingming.html
+++ b/AImingming.html
@@ -32,7 +32,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>★AI민재 (완성 전)★</header>
+    <header>★AI민재★</header>
     <div id="main"></div>
     <form>
         <input type="text" id="chat" name="chat" placeholder="공주님한테 전할 말을 입력하세요. (ex)아 점심 뭐 먹지?" />
